// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a dashboard header for a published view 1`] = `
<div>
  <div
    class="usa-prose"
  >
    <div
      class="margin-top-0"
    >
      <h1
        class="display-inline-block margin-y-1 font-sans-xl"
      >
        Dashboard 1
      </h1>
      <div
        class="text-base text-italic margin-bottom-2"
      >
        Test Topic Area
      </div>
    </div>
    <div
      class="grid-row"
    >
      <div
        class="grid-col flex-12 margin-y-2"
      >
        <div
          class="Markdown font-sans-lg usa-prose margin-top-0"
        >
          <p>
            A test descripttion
          </p>
        </div>
      </div>
      <div
        class="margin-top-2 margin-left-1"
      />
    </div>
  </div>
</div>
`;

exports[`renders a dashboard header for an unpublished view 1`] = `
<div>
  <div
    class="usa-prose"
  >
    <div
      class=""
    >
      <h1
        class="display-inline-block margin-bottom-0"
      >
        Dashboard 1
      </h1>
      <div
        class="text-base text-italic margin-bottom-2"
      >
        Test Topic Area
      </div>
    </div>
    <div
      class="grid-row"
    >
      <div
        class="grid-col flex-12 "
      >
        <div
          class="Markdown "
        >
          <p>
            A test descripttion
          </p>
        </div>
      </div>
      <div
        class="margin-top-2 margin-left-1"
      />
    </div>
  </div>
</div>
`;

exports[`renders a dashboard header for an unpublished view with a link 1`] = `
<div>
  <div
    class="usa-prose"
  >
    <div
      class=""
    >
      <h1
        class="display-inline-block margin-bottom-0"
      >
        Dashboard 1
      </h1>
      <div
        class="text-base text-italic margin-bottom-2"
      >
        Test Topic Area
      </div>
    </div>
    <div
      class="grid-row"
    >
      <div
        class="grid-col flex-12 "
      >
        <div
          class="Markdown "
        >
          <p>
            A test descripttion
          </p>
        </div>
      </div>
      <div
        class="margin-top-2 margin-left-1"
      >
        A test link
      </div>
    </div>
  </div>
</div>
`;
